1.0.3 ( rXXXX )
---------------

Added metadata to the Maven target set.

Updated the Ivy example a bit.  Switched to Ivy 2.0.0-beta-1.

Added a Gant Ant Task.  (For supporting continuous integration systems that insist on using Ant.)

Added creating Cobertura reports via the coberturaTest target in the Gantfile.


1.0.2 ( r8867 )
---------------

Fixed bug in parameter types of message Closure in gant.Gant.

Declared this release and eradicated 1.0.1 to avoid any hassles with the above bug.

1.0.1 ( r8861 )
---------------

Amended and extended the Maven target set so that it actually works well enough to be useful.

Change the return codes so as to provide easier discrimination of error cases.

Removed --lib option and replaced with --classpath | -P option.  Takes a path not a single jar.

Added setDefaultTarget function to make setting up the default target easier.  Also the help output for the
target default assumes that the description string is just the name of the default target.

Rearranged the filestore to work better for command line working, Eclipse, and the Maven target set.

Gant now compiles in Eclipse 3.2.2 with Groovy plugin 1.5.0.200712080221. 


1.0.0 ( r8816 )
---------------

Changed the lookup sequence in GantMetaClass adding lookup in the Ant object for a method call as a final
attempt to resolve a name.  This makes Ant. completely optional as requested in GANT-10.

Rearranged the constructors so as to allow for a custom class loader when calling Gant programmatically.

Reverted to -D processing as in 0.3.1 which actually works with Commons CLI 1.0 even though it is a bug.
0.3.2 and 0.3.3 were broken as -D processing did not work at all.

Added the ** * mechanism for creating target set and tool objects using constructor parameters.

Stopped Gant from issuing FileNotFoundException.

Released to coincide with release of Groovy 1.5.0.

0.3.3 ( r8490 )
---------------
